--- a/index.html
+++ b/index.html
@@ -6,49 +6,94 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/estilo.css">
   <style>
-    /* Fundo em formato de onda animada */
+    /* Fundo com ondas animadas */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      position: relative;
+      min-height: 100vh;
+      background: #e5f1e0;
+      overflow-x: hidden;
+    }
+
     .fundo-onda {
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 320px;
-      overflow: hidden;
-      z-index: -1; /* Para ficar atrás do conteúdo */
+      width: 200%; /* para animação horizontal */
+      height: 100%;
+      z-index: -1;
+      pointer-events: none;
     }
 
-    .fundo-onda svg {
+    .onda {
+      position: absolute;
+      width: 200%;
+      height: 100%;
+      bottom: 0;
+    }
+
+    /* Animação horizontal das ondas */
+    @keyframes moverOnda {
+      0% { transform: translateX(0); }
+      50% { transform: translateX(-25%); }
+      100% { transform: translateX(0); }
+    }
+
+    .onda svg {
       width: 100%;
       height: 100%;
       display: block;
     }
 
-    /* Ajuste do container para não sobrepor a onda */
+    .onda:nth-child(1) {
+      bottom: 0;
+      animation: moverOnda 15s ease-in-out infinite;
+      opacity: 0.6;
+    }
+
+    .onda:nth-child(2) {
+      bottom: 20px;
+      animation: moverOnda 20s ease-in-out infinite;
+      opacity: 0.4;
+    }
+
     .container-inicio {
       position: relative;
       z-index: 1;
       text-align: center;
-      padding-top: 150px; /* Para aparecer acima da onda */
+      padding-top: 150px;
     }
   </style>
 </head>
 <body>
 
-  <!-- Fundo em onda animada -->
+<body>
+
+  <!-- Fundo de ondas animadas estilo IA -->
   <div class="fundo-onda">
-    <svg viewBox="0 0 1440 320" preserveAspectRatio="none">
-      <path id="onda" fill="#3a5a30" d="M0,160 C480,240 960,80 1440,160 L1440,320 L0,320 Z">
-        <animate 
-          attributeName="d" 
-          dur="10s" 
-          repeatCount="indefinite"
-          values="
-            M0,160 C480,240 960,80 1440,160 L1440,320 L0,320 Z;
-            M0,120 C480,100 960,200 1440,120 L1440,320 L0,320 Z;
-            M0,160 C480,240 960,80 1440,160 L1440,320 L0,320 Z
-          " />
-      </path>
-    </svg>
+    <div class="onda">
+      <svg viewBox="0 0 1440 320" preserveAspectRatio="none">
+        <path fill="#a6e6a1">
+          <animate attributeName="d" dur="10s" repeatCount="indefinite"
+            values="
+              M0,160 C360,200 1080,120 1440,160 L1440,320 L0,320 Z;
+              M0,140 C360,120 1080,200 1440,140 L1440,320 L0,320 Z;
+              M0,160 C360,200 1080,120 1440,160 L1440,320 L0,320 Z" />
+        </path>
+      </svg>
+    </div>
+    <div class="onda">
+      <svg viewBox="0 0 1440 320" preserveAspectRatio="none">
+        <path fill="#d2f7c7">
+          <animate attributeName="d" dur="12s" repeatCount="indefinite"
+            values="
+              M0,180 C360,220 1080,100 1440,180 L1440,320 L0,320 Z;
+              M0,150 C360,130 1080,200 1440,150 L1440,320 L0,320 Z;
+              M0,180 C360,220 1080,100 1440,180 L1440,320 L0,320 Z" />
+        </path>
+      </svg>
+    </div>
   </div>
 
   <div class="container-inicio">
@@ -62,18 +107,21 @@
     </p>
 
     <!-- OPÇÃO NOVO -->
-    <a href="dados.html" class="card-opcao destaque">
+    <a href="dados.html" class="card-opcao destaque ia-btn">
       <span class="titulo-opcao">Sou novo na Nutri+</span>
       <span class="descricao-opcao">Personalizar minha dieta agora</span>
     </a>
 
     <!-- OPÇÃO CLIENTE -->
-    <a href="login.html" class="card-opcao">
+    <a href="login.html" class="card-opcao ia-btn">
       <span class="titulo-opcao">Já sou cliente da Nutri+</span>
       <span class="descricao-opcao">Acessar minha dieta</span>
     </a>
 
   </div>
+
+</body>
+
 
 </body>
 </html>
