--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 
     <!-- FRASE PRINCIPAL -->
     <p class="subtitulo">
-      Escolha como deseja continuar
+      Escolha como deseja continuar:
     </p>
 
     <!-- OPÇÃO NOVO -->
     <a href="dados.html" class="card-opcao destaque">
-      <span class="titulo-opcao">NOVO na Nutri+</span>
+      <span class="titulo-opcao">Novo</span>
       <span class="descricao-opcao">Personalizar sua dieta agora</span>
     </a>
 
     <!-- OPÇÃO CLIENTE -->
     <a href="login.html" class="card-opcao">
       <span class="titulo-opcao">Sou cliente da Nutri+</span>
-      <span class="descricao-opcao">Acessar meinha Dieta</span>
+      <span class="descricao-opcao">Acessar minha Dieta</span>
     </a>
 
   </div>
