--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
     <!-- OPÇÃO NOVO -->
     <a href="dados.html" class="card-opcao destaque">
-      <span class="titulo-opcao">Novo</span>
+      <span class="titulo-opcao">Novo na NUTRI+</span>
       <span class="descricao-opcao">Personalizar sua dieta agora</span>
     </a>
 
     <!-- OPÇÃO CLIENTE -->
     <a href="login.html" class="card-opcao">
-      <span class="titulo-opcao">Sou cliente da Nutri+</span>
+      <span class="titulo-opcao">Sou cliente da NUTRI+</span>
       <span class="descricao-opcao">Acessar minha Dieta</span>
     </a>
 
