--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- OPÇÃO CLIENTE -->
     <a href="login.html" class="card-opcao">
-      <span class="descricao-opcao">Acessar minha Dieta</span>
+      <span class="descricao-opcao">Já tenho Dieta</span>
     </a>
 
   </div>
