--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </a>
 
     <!-- OPÇÃO CLIENTE -->
-    <a href="login.html" class="card-opcao">
+    <a href="login.html" class="card-opcao destaque">
       <span class="descricao-opcao">Cliente Nutri+</span>
     </a>
 
