--- a/dados.html
+++ b/dados.html
@@ -39,23 +39,24 @@
     </select>
 
     <!-- CALORIAS -->
-    <div class="opcao">
-      <button type="button" class="opcao-toggle">Calorias</button>
-      <div class="opcao-body">
-        <select class="input-clean">
-          <option>1600 kcal</option>
-          <option>1800 kcal</option>
-          <option>2000 kcal</option>
-          <option>2200 kcal</option>
-          <option>Não sei informar</option>
-        </select>
-      </div>
-    </div>
+    <div class="opcao-expandivel">
+  <button type="button" class="opcao-botao"> Calorias</button>
+
+  <div class="opcao-conteudo">
+    <select>
+      <option>1600 kcal</option>
+      <option>1800 kcal</option>
+      <option>2000 kcal</option>
+      <option>2200 kcal</option>
+      <option>Não sei dizer</option>
+    </select>
+  </div>
+</div>
 
     <!-- ALERGIA -->
-    <div class="opcao">
-      <button type="button" class="opcao-toggle">Alergia</button>
-      <div class="opcao-body">
+    <div class="opcao-expandivel">
+      <button type="button" class="opcao-botao">Alergia</button>
+      <div class="opcao-Conteudo">
         <select class="input-clean">
           <option>Não possuo</option>
           <option>Sim, possuo</option>
@@ -65,9 +66,9 @@
     </div>
 
     <!-- HISTÓRICO -->
-    <div class="opcao">
-      <button type="button" class="opcao-toggle">Histórico de Doença</button>
-      <div class="opcao-body">
+    <div class="opcao-expandivel">
+      <button type="button" class="opcao-botao">Histórico de Doença</button>
+      <div class="opcao-Conteudo">
         <select class="input-clean">
           <option>Não possuo</option>
           <option>Pessoal</option>
