--- a/dados.html
+++ b/dados.html
@@ -12,86 +12,47 @@
     <div class="icone-medidas">📏</div>
     <h1 class="titulo-principal">Medidas Corporais</h1>
     <p class="subtitulo">
-      Informe seus dados para personalizarmos sua dieta
+      Informe suas medidas corretamente para iniciarmos
     </p>
   </div>
 
   <div class="card-formulario">
 
-    <input class="input-clean" type="text" placeholder="Seu nome">
-    <input class="input-clean" type="number" placeholder="Sua idade">
-    <input class="input-clean" type="number" placeholder="Peso (kg)">
-    <input class="input-clean" type="number" placeholder="Altura (cm)">
+    <div class="campo-whatsapp">
+      <input type="text" id="nome" placeholder="Seu nome">
+    </div>
 
-    <select class="input-clean">
-      <option value="">Sexo</option>
-      <option>Masculino</option>
-      <option>Feminino</option>
-    </select>
+    <div class="campo-whatsapp">
+      <input type="number" id="idade" placeholder="Sua idade">
+    </div>
 
-    <select class="input-clean">
-      <option value="">Objetivo</option>
-      <option>Emagrecimento</option>
-      <option>Hipertrofia</option>
-      <option>Recomposição Corporal</option>
-      <option>Manutenção</option>
-      <option>Saúde e Bem-estar</option>
-    </select>
+    <div class="campo-whatsapp">
+      <input type="number" id="peso" placeholder="Peso (kg)">
+    </div>
 
-<!-- CALORIAS -->
-<div class="campo-expansivel">
-  <div class="campo-trigger">Calorias</div>
+    <div class="campo-whatsapp">
+      <input type="number" id="altura" placeholder="Altura (cm)">
+    </div>
 
-  <div class="campo-conteudo">
-    <select>
-      <option value="">Selecione</option>
-      <option>1600 kcal</option>
-      <option>1800 kcal</option>
-      <option>2000 kcal</option>
-      <option>2200 kcal</option>
-      <option>Não sei dizer</option>
-    </select>
-  </div>
-</div>
+    <div class="campo-whatsapp">
+      <select id="sexo">
+        <option value="">Sexo</option>
+        <option>Masculino</option>
+        <option>Feminino</option>
+      </select>
+    </div>
 
-<!-- ALERGIA -->
-<div class="campo-expansivel">
-  <div class="campo-trigger">Alergia</div>
+    <div class="campo-whatsapp">
+      <select id="objetivo">
+        <option value="">Objetivo</option>
+        <option>Emagrecimento</option>
+        <option>Hipertrofia</option>
+        <option>Recomposição Corporal</option>
+        <option>Manutenção</option>
+        <option>Saúde e Bem-estar</option>
+      </select>
+    </div>
 
-  <div class="campo-conteudo">
-    <select class="select-alergia">
-      <option value="">Selecione</option>
-      <option value="nao">Não possuo</option>
-      <option value="sim">Sim, possuo</option>
-    </select>
-
-    <input
-      type="text"
-      class="input-extra"
-      placeholder="Descreva a alergia"
-    >
-  </div>
-</div>
-
-<!-- HISTÓRICO DE DOENÇA -->
-<div class="campo-expansivel">
-  <div class="campo-trigger">Histórico de Doença</div>
-
-  <div class="campo-conteudo">
-    <select class="select-historico">
-      <option value="">Selecione</option>
-      <option value="nao">Não possuo</option>
-      <option value="sim">Sim, possuo</option>
-    </select>
-
-    <input
-      type="text"
-      class="input-extra"
-      placeholder="Descreva o histórico"
-    >
-  </div>
-</div>
-
-  <script src="js/dados.js"></script>
-</body>
-</html>
+    <!-- CALORIAS -->
+    <div class="campo-expansivel">
+      <div class="campo-trigger">
