--- a/dados.html
+++ b/dados.html
@@ -18,21 +18,34 @@
 
   <div class="card-formulario">
 
-    <div class="campo-whatsapp">
-      <input type="text" id="nome" placeholder="Seu nome">
-    </div>
+    <div class="campo-expansivel ativo">
+  <div class="campo-trigger" data-default="Nome">Nome</div>
+  <div class="campo-conteudo">
+    <input type="text" id="nome" placeholder="Digite seu nome">
+  </div>
+</div>
 
-    <div class="campo-whatsapp">
-      <input type="number" id="idade" placeholder="Sua idade">
-    </div>
+<div class="campo-expansivel">
+  <div class="campo-trigger" data-default="Idade">Idade</div>
+  <div class="campo-conteudo">
+    <input type="number" id="idade" placeholder="Ex: 25">
+  </div>
+</div>
 
-    <div class="campo-whatsapp">
-      <input type="number" id="peso" placeholder="Peso (kg)">
-    </div>
+<div class="campo-expansivel">
+  <div class="campo-trigger" data-default="Peso">Peso</div>
+  <div class="campo-conteudo">
+    <input type="number" id="peso" placeholder="kg">
+  </div>
+</div>
 
-    <div class="campo-whatsapp">
-      <input type="number" id="altura" placeholder="Altura (cm)">
-    </div>
+<div class="campo-expansivel">
+  <div class="campo-trigger" data-default="Altura">Altura</div>
+  <div class="campo-conteudo">
+    <input type="number" id="altura" placeholder="cm">
+  </div>
+</div>
+
 
     <div class="campo-whatsapp">
       <select id="sexo">
